css/style.css
/*
Colors used:
Background (Cream): #FFF8F0;
Primary Text (Dark Brown): #2F2E3C;
Link (Dark Green): #33484B;
Link Hover/Active/Etc (Light Green): #586960;
Accent 1 (Lavendar): #B4AEF1;
Accent 2 (Blue): #91c9ff;
*/

@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Akshar:wght@300..700');
@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&family=Kufam:ital,wght@0,400..900;1,400..900&family=Varela+Round&family=Zen+Maru+Gothic');
@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Mate:ital@0;1&family=Teko:wght@300..700');
@import url('https://fonts.googleapis.com/css2?family=Yatra+One');
@import url('https://fonts.googleapis.com/css2?family=Sriracha');
@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700');
@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great');
@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700');

* {
  box-sizing: border-box;
}

html {
  background: #33484b;
}

body {
  background: #FFF8F0;
  font-family: 'Fredoka', sans-serif;
  color: #33484b;
  font-weight: 350;
  font-size: 18px;
  line-height: 1.6;
}

body {
  animation: 1000ms fade-in;
}

main {
  padding-top: 115px;
  overflow: hidden;
}

footer {
  text-align: center;
  margin-top: 20px;
  border-top: 1px solid #33484B;
  padding-bottom: 5px;
}

b, strong {
  font-weight: 500;
}

h1, h3, h4, h5 {
  font-weight: 500;
}

h2 {
  font-weight: 600;
}

h1,h2 {
  font-family: 'Cabin Sketch', sans-serif;
}

h1 {
  font-size: 2.2em;
}

h2 {
  font-size: 1.8em;
}

h2, h3, h4 {
  margin: 10px 0;
}

h3 {
  position: relative;
}

h3:after {
  content: "";
  position: absolute;
  display: block;
  width:  100%;
  height: 1px;
  background: linear-gradient(90deg, rgba(51,72,75,1) 0%, rgba(51,72,75,0) 100%);
}

hr {
  height: 1px;
  border: none;
  background: linear-gradient(90deg, rgba(51,72,75,1) 0%, rgba(51,72,75,0) 100%);
}

.project-page h3:after {
  content: none;
}

h5 {
  display: inline-block;
  margin: 0;
}

a {
  color: #33484B;
  transition: 300ms ease;
  text-decoration: none;
}

a:hover, a:focus, a:active {
  color: #586960
}

img {
  max-width: 100%;
  border-radius: 5px;
  margin: 0 auto;
}

/** I usually upload larger images bc I find the quality just... looks worse, but I certainly don't want anything *smaller* than the screen to stretch - 
 * so I'm using max width and an auto margin to center anything smaller, rather than stretching everything to 100% **/

ul {
  padding: 0 15px;
  margin: 0;
}

hr {
  margin: 20px 0;
}

header ul, footer ul {
  padding: 0;
  list-style-type: none;
  margin: 10px 0;
}

/******************** Home Page Styling ******************/

main#home {
  padding-top: 0;
}

#hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#hero p {
  font-size: 20px;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

#home .menu-icon {
    display: none;
  }

#home nav {
    float: none;
  }

#home nav ul {
  display: flex;
  align-items: center;
  padding: 0;
}

#home nav ul li {
  margin-right: 10px;
}

/******************** Layout Styling ********************/

.container {
  padding: 0 15px;
  margin: 20px auto;
  max-width: 1200px;
}

.subtitle {
  font-size: 80%;
  opacity: 0.8;
}

/** I know it says to use a container for each section, so I have - why 
 * is this better than wrapping the whole main content in one container though? It seems like extra divs for no reason **/

#hero {
  padding: 30px 20px;
  background: #586960;
  color: white;
  min-height: 100vh;
}

#hero h1 {
  margin: 0;
}

#hero p {
  margin: 10px 0;
}

.row {
  margin: 25px 0;
}

.icon-row {
  display: flex;
  align-items: center;
  justify-content: left;
  color: #FFF8F0;
  font-size: 1.6em;
  text-align: left;
}

.icon-row a {
  color: #FFF8F0;
  text-decoration: none;
  height: 65px;
}

.icon-row img {
  margin-right: 20px;
}

.project-container {
  border-bottom: 1px dashed #33484B;
  margin: 0;
  padding: 25px 0;
}

.project-container:last-child {
  border-bottom: none;
}

/** this removes the bottom border from the last project, so it doesn't look weird with the footer's top border 
 * Also, are dashed borders tacky? I think they have a fun vibe but I know it's not really proffessional. Not sure if a solid border or a gradiated
 * div divider would be more appropriate. **/

p.project-description {
  margin: 10px 0;
}

#navigation {
  background: #33484B;
  margin: 0;
  position: fixed;
  box-shadow: 0 2px 5px #131e20;
  width: 100%;
  top: 0;
  text-align: center;
  z-index: 3;
}

#home #navigation {
  position: unset;
  background: none;
  box-shadow: none;
  padding: 0;
}

#navigation a:hover,  #navigation a:focus, #navigation a:active {
  color: #B4AEF1;
}

nav > ul {
  margin-bottom: 0;
}

nav > ul {
  margin: 0;
}

.navtoggle {
  padding: 15px 20px;
  transition: height 200ms ease;
  height: 90px;
}

#navtoggle-icon {
    display: flex;
    flex-direction: column;
    position: relative;
}

#navtoggle-icon img {
    width: 35px;
}

.left-line, .right-line {
  margin: 4px 0;
  transition: 200ms ease;
}

#navtoggle-icon.open .left-line {
    transform: rotate(45deg);
}

#navtoggle-icon.open .right-line {
    transform: rotate(-45deg);
    position: absolute;
}

.navtoggle li:not(:last-child) {
  display: none;
}

.navtoggle li:last-child {
  display: inline;
}

.navtoggle, .navtoggle.responsive {
  position: relative;
  font-size: 85%;
}

.navtoggle .icon {
  position: absolute;
  right: 12px;
  top: 20px;
  font-size: 35px;
  display: block;
  height: 30px;
}

#navtoggle-icon.open {
  margin-top:10px;
}

nav > ul > li > a {
  padding: 0 10px;
  color: white;
  text-decoration: none;
  font-family: 'Cabin Sketch', sans-serif;
  font-size: 1.4em;
}

.navtoggle.responsive li  {
  display: block;
}

.navtoggle.responsive nav {
  padding: 24px 0 0;
}
/* ... */

